--- a/public/members.html
+++ b/public/members.html
@@ -36,8 +36,26 @@
       </div>
   </div>
 
+  <div class="col-sm-4">     
+    <div class="btn-group-vertical">
+      <button type="button" class="btn btn-outline-success btn-lg">General</button>
+      <button type="button" class="btn btn-outline-success btn-lg">COVID Talks</button>
+      <button type="button" class="btn btn-outline-success btn-lg">Sports</button>
+      <button type="button" class="btn btn-outline-success btn-lg">Books</button>
+      <button type="button" class="btn btn-outline-success btn-lg">Fitness</button>
+      <button type="button" class="btn btn-outline-success btn-lg">Cooking</button>
+      <button type="button" class="btn btn-outline-success btn-lg">Tech</button>
+      <button type="button" class="btn btn-outline-success btn-lg">Cars</button>
+      <button type="button" class="btn btn-outline-success btn-lg">Outdoors</button>
+      <button type="button" class="btn btn-outline-success btn-lg">Movies</button>
+      <button type="button" class="btn btn-outline-success btn-lg">Music</button>
+      <button type="button" class="btn btn-primary btn-lg btn-block">Add Categoryyyyyyyyyyyyyyyyyyyyyyyyyyy</button>
+    </div>
+  </div>
+
+
   <div class="row">
-    <div class="col-sm-10">
+    <div class="col-sm-12">
       <div class="card-deck">
         <div class="card">
           <div class="card-body">
@@ -50,23 +68,6 @@
             <p class="card-text">Dynamically Generate Group</p>
           </div>
         </div>
-      </div>
-    </div>
-
-    <div class="col-sm-2">     
-      <div class="btn-group-vertical">
-        <button type="button" class="btn btn-outline-success btn-lg">General</button>
-        <button type="button" class="btn btn-outline-success btn-lg">COVID Talks</button>
-        <button type="button" class="btn btn-outline-success btn-lg">Sports</button>
-        <button type="button" class="btn btn-outline-success btn-lg">Books</button>
-        <button type="button" class="btn btn-outline-success btn-lg">Fitness</button>
-        <button type="button" class="btn btn-outline-success btn-lg">Cooking</button>
-        <button type="button" class="btn btn-outline-success btn-lg">Tech</button>
-        <button type="button" class="btn btn-outline-success btn-lg">Cars</button>
-        <button type="button" class="btn btn-outline-success btn-lg">Outdoors</button>
-        <button type="button" class="btn btn-outline-success btn-lg">Movies</button>
-        <button type="button" class="btn btn-outline-success btn-lg">Music</button>
-        <button type="button" class="btn btn-primary btn-lg btn-block">Add Category</button>
       </div>
     </div>
 
