--- a/public/members.html
+++ b/public/members.html
@@ -50,10 +50,30 @@
       <button type="button" class="btn btn-outline-success btn-lg">Outdoors</button>
       <button type="button" class="btn btn-outline-success btn-lg">Movies</button>
       <button type="button" class="btn btn-outline-success btn-lg">Music</button>
-      <button type="button" class="btn btn-primary btn-lg btn-block">Add Categoryyyyyyyyyyyyyyyyyyyyyyyyyyy</button>
+      <button type="button" class="btn btn-primary btn-lg btn-block">Add Category</button>
     </div>
   </div>
 
+
+  <div class="column mt-5">
+
+
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="card-deck">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Profile</h3>
+              <br>
+              <p class="card-text">Email:</p>
+              <p class="card-text">Bio:</p>
+    
+            </div>
+          </div>
+        </div>
+      </div>
+    
+    </div>
 
   <div class="row">
     <div class="col-sm-12">
@@ -75,6 +95,7 @@
  </div>
 
 
+
 </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -84,3 +105,5 @@
 </body>
 
 </html>
+
+
