--- a/public/members.html
+++ b/public/members.html
@@ -75,7 +75,7 @@
     
     </div>
 
-  <div class="row">
+  <div class="row mt-5">
     <div class="col-sm-12">
       <div class="card-deck">
         <div class="card">
