oved category col down

--- a/public/members.html
+++ b/public/members.html
@@ -24,21 +24,29 @@
   </header>
   </div>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3 text-center">
+        <h2>Welcome <span class="member-name"></span></h2>
+      </div>
+    </div>
+</div>
+
   <div>
       <input id="searchBar" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button id="searchBtn" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
   </div>
 
-  <div class="container">
+  <!-- <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
           <h2>Welcome <span class="member-name"></span></h2>
         </div>
       </div>
-  </div>
+  </div> -->
 
   <div class="col-sm-4">     
-    <div class="btn-group-vertical">
+    <div class="btn-group-vertical" id="categoryCol">
       <button type="button" class="btn btn-outline-success btn-lg">General</button>
       <button type="button" class="btn btn-outline-success btn-lg">COVID Talks</button>
       <button type="button" class="btn btn-outline-success btn-lg">Sports</button>
@@ -50,7 +58,7 @@
       <button type="button" class="btn btn-outline-success btn-lg">Outdoors</button>
       <button type="button" class="btn btn-outline-success btn-lg">Movies</button>
       <button type="button" class="btn btn-outline-success btn-lg">Music</button>
-      <button type="button" class="btn btn-primary btn-lg btn-block">Add Categoryyyyyyyyyyyyyyyyyyyyyyyyyyy</button>
+      <button type="button" class="btn btn-primary btn-lg btn-block">Add Category</button>
     </div>
   </div>
 
