modify group temp, changed the name in members html

--- a/public/members.html
+++ b/public/members.html
@@ -27,7 +27,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3 text-center">
-        <h2>Welcome <span class="member-name"></span></h2>
+        <h2> Homepage <span class="member-name"></span></h2>
       </div>
     </div>
 </div>
@@ -37,13 +37,7 @@
       <button id="searchBtn" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
   </div>
 
-  <!-- <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-          <h2>Welcome <span class="member-name"></span></h2>
-        </div>
-      </div>
-  </div> -->
+
 
   <div class="col-sm-4">     
     <div class="btn-group-vertical" id="categoryCol">
