--- a/public/members.html
+++ b/public/members.html
@@ -65,8 +65,9 @@
             <div class="card-body">
               <h3 class="card-title">Profile</h3>
               <br>
-              <p class="card-text">Email:</p>
-              <p class="card-text">Bio:</p>
+              <p class="card-text" id="emailUser">Email:</p>
+              <!-- <p class="card-text">Bio:</p> -->
+              <p class="card-text" id="idUser">id:</p>
     
             </div>
           </div>
