updated sign up form with first last bio inputs

--- a/public/signup.html
+++ b/public/signup.html
@@ -40,7 +40,7 @@
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
           <div class="form-floating">
-            <textarea class="form-control" placeholder="Provide some Bio Information" id="floatingTextarea2" style="height: 100px"></textarea>
+            <textarea class="form-control" placeholder="Provide some information about yourself" id="floatingTextarea2" style="height: 100px"></textarea>
             <label for="floatingTextarea2"></label>
           </div>
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
