--- a/public/signup.html
+++ b/public/signup.html
@@ -40,6 +40,7 @@
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
           <div class="form-floating">
+            <label for="exampleInputPassword1">Tell Us About Yourself</label>
             <textarea class="form-control" placeholder="Provide some information about yourself" id="floatingTextarea2" style="height: 100px"></textarea>
             <label for="floatingTextarea2"></label>
           </div>
