developed function to update user CategoryId

--- a/public/members.html
+++ b/public/members.html
@@ -79,7 +79,7 @@
             <div id="userGroups">
 
           <!-- Use this section for group info     -->
-            <p class="card-text" id="userCat1"> Dynamically Generate Group</p>
+            <h4 class="card-text" id="categoryHeader"> Dynamically Generate Group</h4>
             <p class="card-text">Dynamically Generate Group</p>
             <p class="card-text">Dynamically Generate Group</p>
             <p class="card-text">Dynamically Generate Group</p>
