--- a/public/members.html
+++ b/public/members.html
@@ -26,8 +26,8 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3 text-center">
-        <h2> Homepage <span class="member-name"></span></h2>
+      <div class="col-md-6 col-md-offset-3">
+        <h2 class="text-center"> Homepage <span class="member-name"></span></h2>
       </div>
     </div>
 </div>
