--- a/public/signup.html
+++ b/public/signup.html
@@ -20,34 +20,44 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h2>Sign Up Form</h2>
+        <!-- <form class="signup">
+
+          <form class="signup"> -->
+
         <form class="signup">
+
           <div class="form-group">
             <label for="exampleInputEmail1">First Name</label>
             <input type="text" class="form-control" id="firstNameInput" placeholder="First Name">
           </div>
-        <form class="signup">
+
           <div class="form-group">
             <label for="exampleInputEmail1">Last Name</label>
             <input type="text" class="form-control" id="lastNameInput" placeholder="Last Name">
           </div>
-        <form class="signup">
+
           <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="email-input" placeholder="Email">
           </div>
+
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
           </div>
+
           <div class="form-floating">
             <label for="exampleInputPassword1">Tell Us About Yourself</label>
-            <textarea class="form-control" placeholder="Provide some information about yourself" id="floatingTextarea2" style="height: 100px"></textarea>
+            <textarea class="form-control" placeholder="Provide some information about yourself" id="floatingTextarea2"
+              style="height: 100px"></textarea>
             <label for="floatingTextarea2"></label>
           </div>
+
           <div style="display: none" id="alert" class="alert alert-danger" role="alert">
             <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
             <span class="sr-only">Error:</span> <span class="msg"></span>
           </div>
+          
           <button type="submit" class="btn btn-default">Sign Up</button>
         </form>
         <br />
@@ -59,6 +69,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
 
-</body>
+  </body>
 
 </html>
