--- a/public/members.html
+++ b/public/members.html
@@ -11,9 +11,9 @@
   <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 
-<body>
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
+<body id="memberspage">
+  <div class="jumbotron jumbotron-fluid" id="headermember">
+    <div class="container" >
       <header>
       <a class="navbar-brand" href="/logout">
           Logout
@@ -41,16 +41,16 @@
 
   <div class="col-sm-4">     
     <div class="btn-group-vertical" id="categoryCol">
-      <button type="button" class="btn btn-outline-success btn-lg">General</button>
-      <button type="button" class="btn btn-outline-success btn-lg">COVID Talks</button>
-      <button type="button" class="btn btn-outline-success btn-lg">Sports</button>
-      <button type="button" class="btn btn-outline-success btn-lg">Books</button>
-      <button type="button" class="btn btn-outline-success btn-lg">Fitness</button>
-      <button type="button" class="btn btn-outline-success btn-lg">Cooking</button>
-      <button type="button" class="btn btn-outline-success btn-lg">Tech</button>
-      <button type="button" class="btn btn-outline-success btn-lg">Cars</button>
-      <button type="button" class="btn btn-outline-success btn-lg">Outdoors</button>
-      <button type="button" class="btn btn-outline-success btn-lg">Movies</button>
+      <button id="category" type="button" class="btn btn-outline-success btn-lg">General</button>
+      <button id="category" type="button" class="btn btn-outline-secondary" btn-lg">COVID Talks</button>
+      <button id="category"type="button" class="btn btn-outline-success btn-lg">Sports</button>
+      <button id="category"type="button" class="btn btn-outline-success btn-lg">Books</button>
+      <button id="category" type="button" class="btn btn-outline-success btn-lg">Fitness</button>
+      <button id="category"type="button" class="btn btn-outline-success btn-lg">Cooking</button>
+      <button id="category"type="button" class="btn btn-outline-success btn-lg">Tech</button>
+      <button id="category"type="button" class="btn btn-outline-success btn-lg">Cars</button>
+      <button id="category"type="button" class="btn btn-outline-success btn-lg">Outdoors</button>
+      <button id="category"type="button" class="btn btn-outline-success btn-lg">Movies</button>
       <button type="button" class="btn btn-outline-success btn-lg">Music</button>
       <button type="button" class="btn btn-primary btn-lg btn-block">Add Category</button>
     </div>
@@ -77,8 +77,8 @@
     
     </div>
 
-  <div class="row mt-5">
-    <div class="col-sm-12">
+  <!-- <div class="row mt-5"> -->
+    <div class="col-sm-4">
       <div class="card-deck">
         <div class="card">
           <div class="card-body">
@@ -94,7 +94,7 @@
       </div>
     </div>
 
- </div>
+ <!-- </div> -->
 
 
 
